# src/handler/spot/get_user_slots.rs
@@ -15,8 +15,7 @@ pub async fn handler(
         Ok(Some(u)) => Json(Res {
             data: spot::get_user_free_slots(state.clone(), &u)
                 .await
-                .expect("get user free slots")
-                .into(),
+                .expect("get user free slots"),
         })
         .into_response(),
         Ok(None) => StatusCode::NOT_FOUND.into_response(),
@@ -27,48 +26,48 @@ pub async fn handler(
 #[derive(Serialize, ToSchema)]
 #[schema(as = GetUserSlots)]
 pub struct Res {
-    pub data: ResSlots,
+    pub data: FreeSlotsWeek,
 }
 
-#[derive(Serialize, ToSchema)]
-pub struct ResSlots(pub Vec<ResDaySlot>);
-
-#[derive(Serialize, ToSchema)]
-pub struct ResDaySlot{
-    pub date: String,
-    pub windows: Vec<ResWindow>
-}
-#[derive(Serialize, ToSchema)]
-pub struct ResWindow{
-    pub field: FieldNumber,
-    pub window: TimeWindow
-}
-impl Into<ResSlots> for FreeSlots {
-    fn into(self) -> ResSlots {
-        ResSlots(self.0.into_iter()
-            .map(|d| {
-                let mut windows: Vec<ResWindow> = d.slots.0.into_iter()
-                    .map(|item| {
-                        item.windows.iter()
-                            .map(|tw| {
-                                ResWindow{
-                                    field: item.field,
-                                    window: tw.clone(),
-                                }
-                            })
-                            .collect::<Vec<ResWindow>>()
-                    })
-                    .flatten()
-                    .collect();
-
-                windows.sort_by(|a, b| a.window.start.cmp(&b.window.start));
-
-                ResDaySlot {
-                    date: get_human_day(&d.date),
-                    windows
-                }
-            })
-            .collect()
-        )
-    }
-}
+// #[derive(Serialize, ToSchema)]
+// pub struct ResSlots(pub Vec<ResDaySlot>);
+//
+// #[derive(Serialize, ToSchema)]
+// pub struct ResDaySlot{
+//     pub date: String,
+//     pub windows: Vec<ResWindow>
+// }
+// #[derive(Serialize, ToSchema)]
+// pub struct ResWindow{
+//     pub field: FieldNumber,
+//     pub window: TimeWindow
+// }
+// impl Into<ResSlots> for FreeSlots {
+//     fn into(self) -> ResSlots {
+//         ResSlots(self.0.into_iter()
+//             .map(|d| {
+//                 let mut windows: Vec<ResWindow> = d.slots.0.into_iter()
+//                     .map(|item| {
+//                         item.windows.iter()
+//                             .map(|tw| {
+//                                 ResWindow{
+//                                     field: item.field,
+//                                     window: tw.clone(),
+//                                 }
+//                             })
+//                             .collect::<Vec<ResWindow>>()
+//                     })
+//                     .flatten()
+//                     .collect();
+//
+//                 windows.sort_by(|a, b| a.window.start.cmp(&b.window.start));
+//
+//                 ResDaySlot {
+//                     date: get_human_day(&d.date),
+//                     windows
+//                 }
+//             })
+//             .collect()
+//         )
+//     }
+// }
